# stanford-algorithms

./: algorithms.opam  dune-project
algorithms/lib/: dune  union_find.ml
java-solution/src/: Deque.java  Percolation.java  PercolationStats.java  Permutation.java  RandomizedQueue.java
lib/: dune  elementary_sorts_quiz.ml  priority_queue.ml  union_find.ml
percolation/: Deque.java  Permutation.java  RandomizedQueue.java
test/: dune
